# template

./: CMakeLists.txt
src/: blob.cpp  blob.h  blobptr.h  debugdelete.h  foo.h  main.cpp  numbers.h  util.h  variadictemplate.h
